Added Tools hide functionality based on edition. Added unit tests